--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                         <a href="https://youtube.com" target="_blank"><button class="custom-btn"><i class="fab fa-youtube"></i> YouTube</button></a>
                         <a href="https://tiktok.com" target="_blank"><button class="custom-btn"><i class="fab fa-tiktok"></i> TikTok</button></a>
                     </div>
-                    <div class="discord-tag">@binly on Discord</div>
-                    <div class="copyright">Copyrights of Binly's @.gg/binly</div>
+                    <div class="discord-tag">@binly._ on Discord</div>
+                    <div class="copyright">Copyrights of Binly || .gg/binly</div>
                 </div>
             </div>
         </div>
