--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <h1 class="title">G4</h1>
                     <p class="description">Hello kewlest people. Uh yea idfk I made this ig so kewl. Join da discord fr theres sum kewl stuff there and you have a chance at maybe becoming one of my slaves or maybe even one ma sex slaves. Luv you cuties<3</p>
                     <div class="buttons">
-                        <a href="https://discord.gg/Binly" target="_blank"><button class="custom-btn"><i class="fas fa-gamepad"></i> Discord</button></a>
-                        <a href="https://youtube.com" target="_blank"><button class="custom-btn"><i class="fas fa-star"></i> YouTube</button></a>
+                        <a href="https://discord.gg/Binly" target="_blank"><button class="custom-btn"><i "></i> Discord</button></a>
+                        <a href="https://youtube.com" target="_blank"><button class="custom-btn"><i class="fab fa-youtube"></i> YouTube</button></a>
                     </div>
                     <div class="discord-tag">@va80 on Discord</div>
                     <div class="copyright">Copyrights of G4 || .gg/binly</div>
